src/main/resources/scss/_transitions.scss
@mixin reactTransition($name) {

	.#{$name}-enter {
		opacity: 0.01;
		transition: opacity .25s ease-in;
	}

	.#{$name}-enter.#{$name}-enter-active {
		opacity: 1;
	}

	.#{$name}-leave {
		opacity: 1;
		transition: opacity .25s ease-in;
	}

	.#{$name}-leave.#{$name}-leave-active {
		opacity: 0.01;
	}

	.#{$name} {
		transition: opacity .25s ease-in;
	}

}


@include reactTransition('button');
@include reactTransition('messages');
@include reactTransition('navdrawer');


.loginforms-enter {
	opacity: 0.01;
	transition: all .25s ease-out;
	width:100%;
	position: absolute;
	top:-1rem;
	left:0;
}

.loginforms-enter.loginforms-enter-active {
	opacity: 1;
	width:100%;
	position: absolute;
	top:0;
	left:0;
}

.loginforms-leave {
	opacity: 1;
	transition: all .25s ease-out;
	width:100%;
	position: absolute;
	top:0;
	left:0;
}

.loginforms-leave.loginforms-leave-active {
	opacity: 0.01;
	width:100%;
	position: absolute;
	top:1rem;
	left:0;
}

.loginforms {
	transition: all .25s ease-out;
}

.loginformswrapper {
	position: relative;
}

